--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "license": "MIT",
   "peerDependencies": {
     "eslint": "^9.13.0",
-    "eslint-plugin-import": "^2.31.0"
+    "eslint-plugin-import": "^2.31.0",
+    "@typescript-eslint/parser": "^8.12.2",
+    "typescript-eslint": "^8.12.2"
   }
 }
